[package]
name = "ckb-multisig"
version = "0.1.0"
edition = "2018"
authors = ["Liu Chuankai <liuck8080@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.9.0"
blake2b-ref = "0.2.1"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }